DTGB-627: Fixed overflow on IE11

--- a/components/31-molecules/modal/_modal.scss
+++ b/components/31-molecules/modal/_modal.scss
@@ -39,7 +39,7 @@
       max-width: $bp-max-content * .8;
       height: auto;
       min-height: 0;
-      margin: 10vh auto $gutter-width
+      margin: 10vh auto $gutter-width;
     }
   }
 
@@ -49,9 +49,7 @@
       height: 100%;
 
       @include tablet {
-        height: auto;
-        min-height: 0;
-        max-height: 80vh;
+        height: 80vh;
       }
 
       > .modal-content {
